--- a/code.html
+++ b/code.html
@@ -2487,7 +2487,7 @@ IF ASKED TO FIX/DEBUG: Provide complete fixed code in \`\`\`${currentLang} block
 
 Answer concisely in Vietnamese (100-200 words).`;
 
-                const response = await fetch("https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent", {
+                const response = await fetch("https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent", {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
