--- a/cpp/new_lines.html
+++ b/cpp/new_lines.html
@@ -6,8 +6,9 @@
     <title>New Lines - C++ Tutorial</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        :root{--primary-color:#4CAF50;--primary-dark:#43A047;--primary-darker:#388E3C;--dark-color:#1a1a1a;--light-color:#f1f1f1;--text-color:#333;--white:#fff;--gray:#666;--light-gray:#e9e9e9;--border-radius:4px;--box-shadow:0 2px 10px rgba(0,0,0,0.1);--sidebar-width:280px}*{margin:0;padding:0;box-sizing:border-box}body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans',sans-serif;line-height:1.6;color:var(--text-color);background-color:#f9f9f9}header{background-color:var(--white);box-shadow:0 2px 4px rgba(0,0,0,0.1);position:sticky;top:0;z-index:1000}.topnav{display:flex;justify-content:space-between;align-items:center;padding:10px 5%;max-width:1400px;margin:0 auto}.logo{font-size:24px;font-weight:700;color:var(--primary-color);text-decoration:none;display:flex;align-items:center}.logo i{margin-right:8px;color:var(--primary-color)}.menu{display:flex;list-style:none}.menu li{margin:0 8px}.menu a{text-decoration:none;color:var(--dark-color);font-weight:500;padding:6px 10px;border-radius:var(--border-radius);transition:all .3s ease}.menu a:hover,.menu a.active{background-color:var(--primary-color);color:white}.menu-btn{display:none;background:none;border:none;font-size:24px;cursor:pointer;color:var(--primary-color)}.page-content{max-width:1400px;margin:40px auto;padding:0 20px;display:grid;grid-template-columns:var(--sidebar-width) 1fr;gap:25px}.page-header{background:linear-gradient(135deg,var(--primary-darker),var(--primary-dark));color:white;padding:30px;border-radius:var(--border-radius);margin-bottom:30px;box-shadow:0 4px 15px rgba(0,0,0,0.1);grid-column:span 2}.page-header h1{font-size:2.5rem;margin-bottom:10px}.back-btn{display:inline-block;background:var(--primary-color);color:white;padding:8px 16px;border-radius:var(--border-radius);text-decoration:none;margin:15px 0;font-weight:500;transition:all .3s}.back-btn:hover{background:var(--primary-darker);transform:translateY(-2px)}.sidebar{background:white;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:20px;height:fit-content;position:sticky;top:80px}.sidebar h3{color:var(--primary-color);margin-bottom:15px;padding-bottom:8px;border-bottom:1px solid var(--light-gray)}.sidebar-menu{list-style:none}.sidebar-menu>li{margin-bottom:8px}.sidebar-menu a{display:block;padding:8px 15px;text-decoration:none;color:var(--text-color);border-radius:var(--border-radius);transition:all .2s}.sidebar-menu a:hover{background:var(--light-gray);color:var(--primary-color)}.sidebar-menu a.active{background:var(--primary-color);color:white}.sidebar-submenu{list-style:none;padding-left:20px;margin-top:5px;display:none}.sidebar-submenu.active{display:block}.sidebar-submenu a{padding:6px 15px;font-size:.95rem}.main-content{background:white;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:30px}.content-section{margin-bottom:40px;padding-bottom:20px;border-bottom:1px solid var(--light-gray)}.content-section:last-child{border-bottom:none}.section-title{font-size:2rem;color:var(--primary-color);margin-bottom:15px;display:flex;align-items:center;gap:10px}.section-title i{font-size:1.5rem}.code-example{background:#2d2d2d;color:#f8f8f2;padding:15px;border-radius:var(--border-radius);margin:15px 0;overflow-x:auto;position:relative}.code-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;color:#888;font-size:.9rem}.code{font-family:'Fira Code',monospace;font-size:.95rem;line-height:1.5}.btn{display:inline-block;background:var(--primary-color);color:white;padding:10px 20px;border-radius:var(--border-radius);text-decoration:none;font-weight:500;transition:all .3s}.btn:hover{background:var(--primary-darker);transform:translateY(-2px)}footer{background:var(--dark-color);color:var(--light-color);text-align:center;padding:30px 0;margin-top:50px}.footer-links{display:flex;justify-content:center;flex-wrap:wrap;gap:20px;margin-bottom:15px}.footer-links a{color:var(--light-gray);text-decoration:none;transition:color .3s}.footer-links a:hover{color:white}.copyright{color:var(--light-gray);font-size:.9rem}@media (max-width:992px){.page-content{grid-template-columns:1fr}.page-header{grid-column:span 1}}@media (max-width:768px){.menu-btn{display:block}.menu{position:fixed;top:70px;left:-100%;width:250px;height:calc(100vh - 70px);background:white;flex-direction:column;padding:20px;box-shadow:2px 0 10px rgba(0,0,0,0.1);transition:left .3s;z-index:999}.menu.active{left:0}.menu li{margin:10px 0}.page-header h1{font-size:2rem}.sidebar{position:static;margin-bottom:25px}}
-    </style>
+        :root{--primary-color:#4CAF50;--primary-dark:#43A047;--primary-darker:#388E3C;--dark-color:#1a1a1a;--light-color:#f1f1f1;--text-color:#333;--white:#fff;--gray:#666;--light-gray:#e9e9e9;--border-radius:4px;--box-shadow:0 2px 10px rgba(0,0,0,0.1);--sidebar-width:280px}*{margin:0;padding:0;box-sizing:border-box}body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans',sans-serif;line-height:1.6;color:var(--text-color);background-color:#f9f9f9}header{background-color:var(--white);box-shadow:0 2px 4px rgba(0,0,0,0.1);position:sticky;top:0;z-index:1000}.topnav{display:flex;justify-content:space-between;align-items:center;padding:10px 5%;max-width:1400px;margin:0 auto}.logo{font-size:24px;font-weight:700;color:var(--primary-color);text-decoration:none;display:flex;align-items:center}.logo i{margin-right:8px;color:var(--primary-color)}.menu{display:flex;list-style:none}.menu li{margin:0 8px}.menu a{text-decoration:none;color:var(--dark-color);font-weight:500;padding:6px 10px;border-radius:var(--border-radius);transition:all .3s ease}.menu a:hover,.menu a.active{background-color:var(--primary-color);color:white}.menu-btn{display:none;background:none;border:none;font-size:24px;cursor:pointer;color:var(--primary-color)}.page-content{max-width:1400px;margin:40px auto;padding:0 20px;display:grid;grid-template-columns:var(--sidebar-width) 1fr;gap:25px}.page-header{background:linear-gradient(135deg,var(--primary-darker),var(--primary-dark));color:white;padding:30px;border-radius:var(--border-radius);margin-bottom:30px;box-shadow:0 4px 15px rgba(0,0,0,0.1);grid-column:span 2}.page-header h1{font-size:2.5rem;margin-bottom:10px}.back-btn{display:inline-block;background:var(--primary-color);color:white;padding:8px 16px;border-radius:var(--border-radius);text-decoration:none;margin:15px 0;font-weight:500;transition:all .3s}.back-btn:hover{background:var(--primary-darker);transform:translateY(-2px)}.sidebar{background:white;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:20px;height:fit-content;position:sticky;top:80px;max-height:calc(100vh - 120px);overflow-y:auto}.sidebar h3{color:var(--primary-color);margin-bottom:15px;padding-bottom:8px;border-bottom:1px solid var(--light-gray)}.sidebar-menu{list-style:none}.sidebar-menu>li{margin-bottom:8px}.sidebar-menu a{display:block;padding:8px 15px;text-decoration:none;color:var(--text-color);border-radius:var(--border-radius);transition:all .2s}.sidebar-menu a:hover{background:var(--light-gray);color:var(--primary-color)}.sidebar-menu a.active{background:var(--primary-color);color:white}.sidebar-submenu{list-style:none;padding-left:20px;margin-top:5px;display:block;}.sidebar-submenu.active{display:block}.sidebar-submenu a{padding:6px 15px;font-size:.95rem}.main-content{background:white;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:30px}.content-section{margin-bottom:40px;padding-bottom:20px;border-bottom:1px solid var(--light-gray)}.content-section:last-child{border-bottom:none}.section-title{font-size:2rem;color:var(--primary-color);margin-bottom:15px;display:flex;align-items:center;gap:10px}.section-title i{font-size:1.5rem}.code-example{background:#2d2d2d;color:#f8f8f2;padding:15px;border-radius:var(--border-radius);margin:15px 0;overflow-x:auto;position:relative}.code-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;color:#888;font-size:.9rem}.code{font-family:'Fira Code',monospace;font-size:.95rem;line-height:1.5}.btn{display:inline-block;background:var(--primary-color);color:white;padding:10px 20px;border-radius:var(--border-radius);text-decoration:none;font-weight:500;transition:all .3s}.btn:hover{background:var(--primary-darker);transform:translateY(-2px)}footer{background:var(--dark-color);color:var(--light-color);text-align:center;padding:30px 0;margin-top:50px}.footer-links{display:flex;justify-content:center;flex-wrap:wrap;gap:20px;margin-bottom:15px}.footer-links a{color:var(--light-gray);text-decoration:none;transition:color .3s}.footer-links a:hover{color:white}.copyright{color:var(--light-gray);font-size:.9rem}@media (max-width:992px){.page-content{grid-template-columns:1fr}.page-header{grid-column:span 1}}@media (max-width:768px){.menu-btn{display:block}.menu{position:fixed;top:70px;left:-100%;width:250px;height:calc(100vh - 70px);background:white;flex-direction:column;padding:20px;box-shadow:2px 0 10px rgba(0,0,0,0.1);transition:left .3s;z-index:999}.menu.active{left:0}.menu li{margin:10px 0}.page-header h1{font-size:2rem}.sidebar{position:static;margin-bottom:25px;max-height:calc(100vh - 120px);overflow-y:auto}}
+    @media (max-width:768px){.sidebar{max-height:none;overflow-y:visible;}}
+.try-yourself{margin-top:10px;display:flex;justify-content:flex-end}.try-btn{background:var(--primary-color);color:white;border:none;padding:8px 14px;border-radius:var(--border-radius);font-size:.9rem;font-weight:600;cursor:pointer;transition:background .3s,transform .2s}.try-btn:hover{background:var(--primary-darker);transform:translateY(-2px)}</style>
 </head>
 <body>
     <header>
@@ -40,15 +41,15 @@
             <h3>C++ Tutorial</h3>
             <ul class="sidebar-menu">
                 <li>
-                    <a href="syntax.html">C++ Syntax</a>
+                    <a href="Syntax.html">C++ Syntax</a>
                     <ul class="sidebar-submenu">
-                        <li><a href="syntax.html">Syntax</a></li>
-                        <li><a href="statements.html">Statements</a></li>
-                        <li><a href="comments.html">Comments</a></li>
+                        <li><a href="Syntax.html">Syntax</a></li>
+                        <li><a href="Statements.html">Statements</a></li>
+                        <li><a href="Comments.html">Comments</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="output.html" class="active">C++ Output</a>
+                    <a href="print_text.html" class="active">C++ Output</a>
                     <ul class="sidebar-submenu active">
                         <li><a href="print_text.html">Print Text</a></li>
                         <li><a href="print_numbers.html">Print Numbers</a></li>
@@ -67,6 +68,9 @@
                 </li>
                 <li>
                     <a href="user_input.html">C++ User Input</a>
+                </li>
+                <li>
+                    <a href="data_types.html">C++ Data Types</a>
                 </li>
             </ul>
         </div>
@@ -161,8 +165,28 @@
     </footer>
 
     <script>
-        document.getElementById('menuToggle').addEventListener('click',function(){document.getElementById('menu').classList.toggle('active')});
-        document.querySelectorAll('.menu a').forEach(link=>{link.addEventListener('click',function(){document.getElementById('menu').classList.remove('active')})});
-    </script>
-</body>
+(function(){
+    const blocks=document.querySelectorAll(".code-example");
+    blocks.forEach(block=>{
+        if(block.querySelector(".try-yourself")) return;
+        const codeEl=block.querySelector(".code");
+        if(!codeEl) return;
+        const wrap=document.createElement("div");
+        wrap.className="try-yourself";
+        const btn=document.createElement("button");
+        btn.type="button";
+        btn.className="try-btn";
+        btn.textContent="Try Yourself Code";
+        btn.addEventListener("click",()=>{
+            const raw=codeEl.innerText||codeEl.textContent||"";
+            const code=raw.replace(/\u00a0/g," ").trimEnd();
+            localStorage.setItem("current_lang","cpp");
+            localStorage.setItem("code_cpp",code);
+            window.location.href="../code.html";
+        });
+        wrap.appendChild(btn);
+        block.appendChild(wrap);
+    });
+})();
+</script></body>
 </html>
